add filter "Final"

--- a/proj.win32/AnimationAction.vcxproj.filters
+++ b/proj.win32/AnimationAction.vcxproj.filters
@@ -10,6 +10,9 @@
     <Filter Include="src">
       <UniqueIdentifier>{bb6c862e-70e9-49d9-81b7-3829a6f50471}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Final">
+      <UniqueIdentifier>{b34d293b-a7a0-4c97-b9de-c3716569af0a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -21,6 +24,9 @@
     <ClCompile Include="..\Classes\HelloWorldScene.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\Final\CRunner.cpp">
+      <Filter>src\Final</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -31,6 +37,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\HelloWorldScene.h">
       <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Final\CRunner.h">
+      <Filter>src\Final</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
