--- a/proj.win32/AnimationAction.vcxproj
+++ b/proj.win32/AnimationAction.vcxproj
@@ -149,12 +149,18 @@ xcopy /Y /Q "$(COCOS_X_ROOT)\cocos2d-x-3.10\prebuilt\win32\*.*" "$(OutDir)"
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\Final\CRunner.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
+    <ClCompile Include="C3SButton.cpp" />
+    <ClCompile Include="CObstacle.cpp" />
+    <ClCompile Include="CScoring.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\Final\CRunner.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
+    <ClInclude Include="C3SButton.h" />
+    <ClInclude Include="CObstacle.h" />
+    <ClInclude Include="CScoring.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
